--- a/Kontak.html
+++ b/Kontak.html
@@ -13,9 +13,9 @@
         <h1 class="logo">Kontak</h1>
         <nav class="nav">
           <ul>
-            <li><a href="Beranda.html">Beranda</a></li>
-            <li><a href="Tentang.html">Tentang</a></li>
-            <li><a href="Kontak.html">Kontak</a></li>
+            <li><a href="index.html">Beranda</a></li>
+            <li><a href="tentang.html">Tentang</a></li>
+            <li><a href="kontak.html">Kontak</a></li>
           </ul>
         </nav>
       </div>
@@ -48,3 +48,4 @@
     </footer>
   </body>
 </html>
+
