--- a/Kontak.html
+++ b/Kontak.html
@@ -13,9 +13,9 @@
         <h1 class="logo">Kontak</h1>
         <nav class="nav">
           <ul>
-            <li><a href="index.html">Beranda</a></li>
-            <li><a href="tentang.html">Tentang</a></li>
-            <li><a href="kontak.html">Kontak</a></li>
+            <li><a href="index.html">beranda</a></li>
+            <li><a href="tentang.html">tentang</a></li>
+            <li><a href="kontak.html">kontak</a></li>
           </ul>
         </nav>
       </div>
@@ -48,4 +48,5 @@
     </footer>
   </body>
 </html>
+
 
