--- a/index.html.html
+++ b/index.html.html
@@ -21,9 +21,9 @@
 
         <nav class="nav">
           <ul>
-            <li><a href="index.html">Beranda</a></li>
-            <li><a href="tentang.html">Tentang</a></li>
-            <li><a href="kontak.html">Kontak</a></li>
+            <li><a href="index.html">beranda</a></li>
+            <li><a href="tentang.html">tentang</a></li>
+            <li><a href="kontak.html">tontak</a></li>
           </ul>
         </nav>
       </div>
@@ -69,4 +69,5 @@
     </footer>
   </body>
 </html>
+
 
